# machine_learning_azur

./: .amlignore  .gitignore  README.md  datasets_info.txt  kidney_stone_planning.ipynb  pyproject.toml
azure_management/: create_blob_storage.ipynb  resources_creation.ipynb
cardio_disease/: ada_train.py  data_exploration.ipynb  main.py  pipeline.py  preprocessing.py  rf_train.py
kidney_stone/: 3D_scatter_plot.ipynb  README.md  conda.yaml  data_exploration.ipynb  data_preprocessing.py  knn_preprocessing.py  knn_train.py  lr_preprocessing.py  lr_train.py  main.py  pipeline.py  pipelines.py  train_models.py  training_models.ipynb
