[project]
name = "cloud_med_predictions"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Eryk Mikolajewicz", email = "eryk.mikolajewicz@gmail.com"},
]
dependencies = [
    "azure-cli>=2.58.0",
    "pip>=24.0",
    "azure-ai-ml>=1.13.0",
    "azure-identity>=1.15.0",
    "mlflow>=2.11.1",
    "azureml-mlflow>=1.55.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
